Fix remaining PMD violations and add documentation to Scene services